[package]
name = "bevy_texture_atlas_tools"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "texture", "atlas", "sprites", "games"]
categories = ["game-development", "Graphics"]
repository = "https://github.com/ickshonpe/texure-atlas-tools"
readme = "README.md"
description = "tools for working with Bevy Texture Atlases"

[dependencies]
bevy = { version = "0.6.0", features = [] }
anyhow = "1.0.4"
rectangle-pack = "0.4"