[package]
name = "bevy_texture_atlas_tools"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "texture", "atlas", "sprites", "games"]
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/texture-atlas-tools"
readme = "README.md"
description = "tools for working with Bevy Texture Atlases"

[dependencies]
bevy = { version = "0.8.0", features = [] }
anyhow = "1.0.4"
rectangle-pack = "0.4"

[dev-dependencies]
bevy = "0.8.0"